...
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true"
        tools:ignore="NotSibling" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
...
